Update lists at 20240621-0900

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,6 +5,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -283,6 +284,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -630,6 +632,7 @@ deny 193.189.100.204;
 deny 193.189.100.205;
 deny 193.189.100.206;
 deny 193.218.118.133;
+deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
@@ -917,7 +920,6 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
-deny 2602:f9f3:0:2::5;
 deny 2602:f9f3:0:2::8d;
 deny 2602:f9f3:0:2::91;
 deny 2602:fc24:12:759::1;
@@ -1401,6 +1403,7 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
+deny 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1439,7 +1442,6 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
-deny 44.194.179.155;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1588,6 +1590,7 @@ deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.253.202.121;
 deny 74.82.47.194;
+deny 75.101.169.30;
 deny 77.105.146.42;
 deny 77.220.196.253;
 deny 77.221.157.237;
