--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -126,7 +126,6 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
-allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
@@ -610,6 +609,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
+allow 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
