--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -661,8 +661,10 @@ set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.26.247.0;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
+set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
+set_real_ip_from 198.251.89.96;
 set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
@@ -711,6 +713,7 @@ set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
 set_real_ip_from 2001:41d0:a:5c0::1;
+set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -892,6 +895,7 @@ set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
+set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
@@ -978,6 +982,14 @@ set_real_ip_from 2605:6400:30:efba:dead::;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f174::;
+set_real_ip_from 2605:6400:30:f174:1:1:1:1;
+set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
+set_real_ip_from 2605:6400:30:f174:1:2:3:4;
+set_real_ip_from 2605:6400:30:f174::42;
+set_real_ip_from 2605:6400:30:f174:42:42::;
+set_real_ip_from 2605:6400:30:f174:42:42:42:0;
+set_real_ip_from 2605:6400:30:f174:42:42:42:42;
+set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
@@ -1412,6 +1424,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.200.178.225;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.37.81;
 set_real_ip_from 37.1.201.144;
@@ -1477,6 +1490,7 @@ set_real_ip_from 45.79.50.161;
 set_real_ip_from 45.79.66.123;
 set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.27;
+set_real_ip_from 45.80.208.127;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.85.15.23;
@@ -1517,6 +1531,7 @@ set_real_ip_from 5.182.86.212;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
+set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.190;
@@ -1558,7 +1573,6 @@ set_real_ip_from 54.36.209.254;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 54.86.192.40;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
@@ -1568,7 +1582,6 @@ set_real_ip_from 64.227.115.78;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.147;
-set_real_ip_from 66.94.107.91;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.222;
