Update lists at 20240621-2100

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,7 +1,6 @@
 allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
-allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
@@ -128,6 +127,7 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
+allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:1c9::1;
