--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -695,7 +696,6 @@ allow 199.195.253.247;
 allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
-allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
@@ -838,6 +838,7 @@ allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
 allow 209.135.168.10;
+allow 209.135.168.56;
 allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.46.203;
@@ -920,6 +921,7 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
+allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:1c9::1;
@@ -1424,7 +1426,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.200.178.225;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.1.201.144;
@@ -1561,6 +1562,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.147.67.119;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1617,7 +1619,6 @@ allow 80.67.172.162;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 81.16.33.42;
-allow 81.17.28.95;
 allow 82.118.242.36;
 allow 82.153.138.119;
 allow 82.153.138.182;
@@ -1641,7 +1642,6 @@ allow 85.93.218.204;
 allow 86.104.194.13;
 allow 87.118.110.27;
 allow 87.118.116.103;
-allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
@@ -1732,6 +1732,7 @@ allow 94.230.208.148;
 allow 94.24.109.10;
 allow 94.24.109.20;
 allow 94.24.109.30;
+allow 94.24.109.40;
 allow 94.32.66.15;
 allow 94.75.225.81;
 allow 95.128.43.164;
