--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -195,7 +196,6 @@ allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.97.114.202;
@@ -618,7 +618,6 @@ allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.168.141.173;
 allow 193.168.143.161;
-allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
 allow 193.189.100.197;
@@ -896,6 +895,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -918,6 +918,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1387,7 +1388,6 @@ allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:578f::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
 allow 2a0f:df00:0:255::197;
@@ -1442,7 +1442,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
-allow 44.223.253.177;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1560,6 +1559,7 @@ allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
+allow 52.72.217.171;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
