--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,6 +5,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -195,7 +196,6 @@ deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.94;
 deny 176.118.193.33;
-deny 176.121.81.51;
 deny 176.126.253.190;
 deny 176.58.100.98;
 deny 176.97.114.202;
@@ -618,7 +618,6 @@ deny 193.105.134.150;
 deny 193.105.134.155;
 deny 193.168.141.173;
 deny 193.168.143.161;
-deny 193.189.100.194;
 deny 193.189.100.195;
 deny 193.189.100.196;
 deny 193.189.100.197;
@@ -896,6 +895,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
@@ -918,6 +918,7 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1387,7 +1388,6 @@ deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:578f::1;
 deny 2a0f:93c1:26:1f2::9ce5;
-deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
 deny 2a0f:df00:0:255::197;
@@ -1442,7 +1442,6 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
-deny 44.223.253.177;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1560,6 +1559,7 @@ deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.72.110;
+deny 52.72.217.171;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
