Update lists at 20240622-1800

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -595,6 +595,7 @@ allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:578f::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
 allow 2a0f:df00:0:255::197;
@@ -626,7 +627,5 @@ allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
-allow 2a12:8641:3:12::;
-allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 2a12:d8c0:109a:9001::7;
