--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -134,8 +135,6 @@ allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.76;
 allow 144.172.118.90;
-allow 144.172.73.11;
-allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
 allow 146.59.234.220;
@@ -617,6 +616,7 @@ allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.168.141.173;
 allow 193.168.143.161;
+allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
 allow 193.189.100.197;
@@ -1387,6 +1387,7 @@ allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:578f::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
 allow 2a0f:df00:0:255::197;
@@ -1418,14 +1419,13 @@ allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
-allow 2a12:8641:3:12::;
-allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
+allow 35.169.48.0;
 allow 37.114.37.81;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1440,7 +1440,6 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 38.242.254.131;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1573,7 +1572,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.85.0.240;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
