Update lists at 20240622-2100

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,7 +5,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -1380,6 +1379,7 @@ deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3e3:519::1;
 deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:470::30;
+deny 2a0e:b107:12d:abcd:f8fe:d2ff:feb0:6d14;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
@@ -1424,8 +1424,8 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 3.209.49.53;
 deny 35.0.127.52;
-deny 35.169.48.0;
 deny 37.114.37.81;
 deny 37.1.201.144;
 deny 37.120.190.85;
@@ -1440,6 +1440,7 @@ deny 37.252.254.33;
 deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
+deny 41.216.183.87;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
