--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -283,6 +283,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -514,6 +515,7 @@ allow 185.243.218.202;
 allow 185.243.218.204;
 allow 185.243.218.35;
 allow 185.243.218.41;
+allow 185.243.218.46;
 allow 185.243.218.61;
 allow 185.243.218.89;
 allow 185.243.218.95;
@@ -894,6 +896,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -910,12 +913,12 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1124,6 +1127,7 @@ allow 2a03:94e0:ffff:185:243:218:0:202;
 allow 2a03:94e0:ffff:185:243:218:0:204;
 allow 2a03:94e0:ffff:185:243:218:0:35;
 allow 2a03:94e0:ffff:185:243:218:0:41;
+allow 2a03:94e0:ffff:185:243:218:0:46;
 allow 2a03:94e0:ffff:185:243:218:0:89;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
@@ -1424,7 +1428,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.237.206.18;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1442,6 +1445,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 41.216.183.87;
+allow 44.193.54.79;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1584,7 +1588,6 @@ allow 66.78.40.147;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.253.202.121;
 allow 74.82.47.194;
