Update lists at 20240625-0000

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -2,7 +2,10 @@ allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
+allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
+allow 2001:1b60:3:239:1003:103:0:1;
+allow 2001:1b60:3:239:1003:106:0:1;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
@@ -15,7 +18,6 @@ allow 2001:41d0:701:1100::38fc;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
-allow 2001:41d0:a:5c0::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -121,7 +123,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
