Update lists at 20240626-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -154,7 +154,6 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -219,7 +218,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.31.124.154;
+allow 178.31.25.187;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -284,7 +283,6 @@ allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.148.3.217;
 allow 185.14.97.37;
-allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
@@ -581,7 +579,6 @@ allow 192.42.116.184;
 allow 192.42.116.185;
 allow 192.42.116.186;
 allow 192.42.116.187;
-allow 192.42.116.189;
 allow 192.42.116.19;
 allow 192.42.116.191;
 allow 192.42.116.192;
@@ -639,6 +636,7 @@ allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.233.133.42;
@@ -693,7 +691,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -750,7 +747,6 @@ allow 2001:67c:6ec:203:192:42:116:184;
 allow 2001:67c:6ec:203:192:42:116:185;
 allow 2001:67c:6ec:203:192:42:116:186;
 allow 2001:67c:6ec:203:192:42:116:187;
-allow 2001:67c:6ec:203:192:42:116:189;
 allow 2001:67c:6ec:203:192:42:116:191;
 allow 2001:67c:6ec:203:192:42:116:192;
 allow 2001:67c:6ec:203:192:42:116:193;
@@ -843,6 +839,7 @@ allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.46.203;
 allow 209.141.50.178;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -895,6 +892,7 @@ allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.236.122.62;
+allow 23.26.133.152;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
@@ -919,6 +917,7 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
+allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:81a6::1;
@@ -1403,6 +1402,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1530,6 +1530,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.5.110.136;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.190;
@@ -1559,7 +1560,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.144.24.204;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
