--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,4 +1,3 @@
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -54,7 +53,6 @@ allow 2001:67c:6ec:203:192:42:116:184;
 allow 2001:67c:6ec:203:192:42:116:185;
 allow 2001:67c:6ec:203:192:42:116:186;
 allow 2001:67c:6ec:203:192:42:116:187;
-allow 2001:67c:6ec:203:192:42:116:189;
 allow 2001:67c:6ec:203:192:42:116:191;
 allow 2001:67c:6ec:203:192:42:116:192;
 allow 2001:67c:6ec:203:192:42:116:193;
@@ -127,6 +125,7 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
+allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:81a6::1;
@@ -610,6 +609,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
