--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -6,7 +6,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -154,6 +153,7 @@ deny 149.56.44.47;
 deny 151.80.148.159;
 deny 152.89.233.169;
 deny 154.16.116.61;
+deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.247.72.192;
@@ -636,14 +636,12 @@ deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
-deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.233.133.109;
 deny 193.233.133.42;
 deny 193.239.232.230;
 deny 193.26.115.43;
 deny 193.26.115.61;
-deny 193.41.226.117;
 deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
@@ -691,6 +689,7 @@ deny 199.195.253.124;
 deny 199.195.253.156;
 deny 199.195.253.180;
 deny 199.195.253.247;
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
@@ -1378,6 +1377,7 @@ deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3e3:519::1;
 deny 2a0e:97c0:3ea:372::1;
+deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:12d:abcd:f8fe:d2ff:feb0:6d14;
 deny 2a0e:b107:dd0::3:ed78:7632;
@@ -1402,7 +1402,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
-deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1425,8 +1424,10 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 34.193.85.249;
 deny 35.0.127.52;
 deny 37.114.37.81;
+deny 37.114.41.119;
 deny 37.1.201.144;
 deny 37.120.190.85;
 deny 37.120.239.59;
@@ -1530,7 +1531,6 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.5.110.136;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.103.190;
