Update lists at 20240627-0000

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
@@ -104,7 +105,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -121,7 +121,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -273,7 +272,6 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
-deny 2a01:7e02::f03c:94ff:fe88:6fd4;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
@@ -610,7 +608,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
-deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
