Update lists at 20240627-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -154,6 +154,7 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -195,7 +196,6 @@ allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
-allow 174.129.210.93;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -285,6 +285,7 @@ allow 185.14.97.37;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -629,12 +630,6 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
-allow 193.218.118.133;
-allow 193.218.118.173;
-allow 193.218.118.178;
-allow 193.218.118.182;
-allow 193.218.118.188;
-allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.233.133.42;
 allow 193.239.232.230;
@@ -687,6 +682,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -1173,6 +1169,7 @@ allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
+allow 2a06:1700:1:2a::7;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:11:7::2;
@@ -1394,12 +1391,6 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
-allow 2a0f:e586:f:f::133;
-allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
-allow 2a0f:e586:f:f:a052:2166:bef9:a432;
-allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
-allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1553,6 +1544,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.211.224.13;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
