--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -265,7 +265,6 @@ deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
-deny 2a01:5e0:36:c506::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
@@ -359,6 +358,7 @@ deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
+deny 2a04:9dc0:31::c0cc:fb;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -389,6 +389,7 @@ deny 2a06:1700:4:11:7::2;
 deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
+deny 2a06:de01:200::23;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
